--- a/1semestre/algoritmosLogicaProgramacao/Aula1/.vscode/launch.json
+++ b/1semestre/algoritmosLogicaProgramacao/Aula1/.vscode/launch.json
@@ -14,7 +14,7 @@
             "args": [],
             "cwd": "${workspaceFolder}/HelloWorld",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
-            "console": "externalTerminal",
+            "console": "internalConsole",
             "stopAtEntry": false
         },
         {
